--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "gsap": "^3.14.2",
     "next": "^16.1.5",
+    "postcss": "^8.5.6",
     "react": "^19.0.1",
     "react-dom": "^19.0.0"
   },
@@ -20,14 +23,14 @@
     "@cloudflare/workers-types": "^4.20250415.0",
     "@eslint/eslintrc": "^3",
     "@opennextjs/cloudflare": "^1.6.5",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.8",
     "postcss-import": "^16.1.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5",
     "wrangler": "^4.11.1"
   }
